infrastructure/monitoring/grafana.vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "grafana.sandcastle.work"
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
          
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: monitoring
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE
---
